docs: improvement
