# docs/swagger.json
@@ -445,7 +445,7 @@
                 "summary": "Submit a Drop Report",
                 "parameters": [
                     {
-                        "description": "Report Request",
+                        "description": "Report request",
                         "name": "report",
                         "in": "body",
                         "required": true,
@@ -491,7 +491,7 @@
                 "summary": "Recall a Drop Report",
                 "parameters": [
                     {
-                        "description": "Report Recall Request",
+                        "description": "Report Recall request",
                         "name": "report",
                         "in": "body",
                         "required": true,
@@ -1100,14 +1100,17 @@
                 "exist"
             ],
             "properties": {
-                "endTime": {
-                    "type": "integer"
+                "closeTime": {
+                    "type": "integer",
+                    "example": 1635966000000
                 },
                 "exist": {
-                    "type": "boolean"
+                    "type": "boolean",
+                    "example": true
                 },
-                "startTime": {
-                    "type": "integer"
+                "openTime": {
+                    "type": "integer",
+                    "example": 1634799600000
                 }
             }
         },
@@ -1192,7 +1195,8 @@
                     ]
                 },
                 "itemId": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "30013"
                 },
                 "quantity": {
                     "type": "integer",
@@ -1235,7 +1239,7 @@
                     "description": "Source describes a source of the report. Third-party API consumers should change this to their own name.",
                     "type": "string",
                     "maxLength": 32,
-                    "example": "frontend-v2"
+                    "example": "your-app-name"
                 },
                 "stageId": {
                     "type": "string",
@@ -1361,10 +1365,12 @@
             "type": "object",
             "properties": {
                 "itemId": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "30012"
                 },
                 "quantity": {
-                    "type": "integer"
+                    "type": "integer",
+                    "example": 1
                 }
             }
         },
@@ -1375,19 +1381,24 @@
                     "type": "integer"
                 },
                 "itemId": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "30012"
                 },
                 "quantity": {
-                    "type": "integer"
+                    "type": "integer",
+                    "example": 1322056
                 },
                 "stageId": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "main_01-07"
                 },
                 "start": {
-                    "type": "integer"
+                    "type": "integer",
+                    "example": 1556676000000
                 },
                 "times": {
-                    "type": "integer"
+                    "type": "integer",
+                    "example": 1061347
                 }
             }
         },
@@ -1412,22 +1423,27 @@
             "type": "object",
             "properties": {
                 "end": {
-                    "type": "integer"
+                    "type": "integer",
+                    "x-nullable": true
                 },
                 "pattern": {
                     "$ref": "#/definitions/v2.Pattern"
                 },
                 "quantity": {
-                    "type": "integer"
+                    "type": "integer",
+                    "example": 159486
                 },
                 "stageId": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "main_01-07"
                 },
                 "start": {
-                    "type": "integer"
+                    "type": "integer",
+                    "example": 1633032000000
                 },
                 "times": {
-                    "type": "integer"
+                    "type": "integer",
+                    "example": 641734
                 }
             }
         },
@@ -1507,10 +1523,12 @@
             "type": "object",
             "properties": {
                 "apCost": {
-                    "type": "integer"
+                    "type": "integer",
+                    "example": 6
                 },
                 "code": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "1-7"
                 },
                 "code_i18n": {
                     "type": "object"
@@ -1525,7 +1543,8 @@
                     "type": "object"
                 },
                 "minClearTime": {
-                    "type": "integer"
+                    "type": "integer",
+                    "example": 118000
                 },
                 "recognitionOnly": {
                     "type": "array",
@@ -1534,13 +1553,23 @@
                     }
                 },
                 "stageId": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "main_01-07"
                 },
                 "stageType": {
-                    "type": "string"
+                    "description": "StageType is the type of the stage\n* MAIN - Mainline Stages\n* SUB - Sub Stages\n* ACTIVITY - Activity Stages\n* DAILY - Daily Stages",
+                    "type": "string",
+                    "enum": [
+                        "MAIN",
+                        "SUB",
+                        "ACTIVITY",
+                        "DAILY"
+                    ],
+                    "example": "MAIN"
                 },
                 "zoneId": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "main_1"
                 }
             }
         },
